--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "19",
-    "react-dom": "19",
-    "uuid": "11.0.5",
-    "lucide-react": "latest",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "uuid": "9.0.1",
+    "lucide-react": "0.294.0",
     "@google/genai": "latest",
     "avr8js": "latest"
   },
