--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "latest",
+    "@supabase/supabase-js": "^2.89.0",
+    "avr8js": "latest",
+    "firebase": "^12.7.0",
+    "lucide-react": "0.294.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "uuid": "9.0.1",
-    "lucide-react": "0.294.0",
-    "@google/genai": "latest",
-    "avr8js": "latest"
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
